fixing layout shift

--- a/src/styles/fields/radio.css
+++ b/src/styles/fields/radio.css
@@ -9,7 +9,8 @@ label + .radio-wrapper {
 }
 
 .radio-inner {
-  border: 1px solid var(--stroke-default);
+  border: 2px solid transparent;
+  outline: 1px solid var(--stroke-default);
   border-radius: 0.5rem;
 
   display: grid;
@@ -41,7 +42,7 @@ label + .radio-wrapper {
 
   &:hover,
   &:focus-within {
-    border: 1px solid var(--stroke-highlight);
+    outline-color: var(--stroke-highlight);
 
     & .radio-image {
       background: url(../../assets/icons/radio-hover.svg) no-repeat;
@@ -49,7 +50,8 @@ label + .radio-wrapper {
   }
 
   &:has(:checked) {
-    border: 2px solid var(--stroke-highlight);
+    outline-width: 0;
+    border-color: var(--stroke-highlight);
 
     & .radio-image {
       background: url(../../assets/icons/radio-checked.svg) no-repeat;
